--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -106,7 +106,10 @@
 <div uk-sticky="animation: uk-animation-slide-top-medium; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; cls-inactive: uk-dark; cls-inactive:uk-navbar-transparent; top: 400">
     <nav class="uk-navbar uk-navbar-container uk-hidden@s uk-padding-small uk-box-shadow-small">
         <div class="uk-navbar-left">
-            <a href="{{ .Site.BaseURL }}"><img src="{{ .Site.Data.appearance.branding.logo }}" alt="{{ .Site.Data.profile.company_name }} logo" width="200"></a>
+            <a href="{{ .Site.BaseURL }}">
+                <img src="{{ .Site.Data.appearance.branding.logo }}" alt="" width="200" class="dark-logo">
+                <img src="{{ .Site.Data.appearance.branding.white_logo }}" alt="" width="200" class="white-logo">
+            </a>
         </div>
         <div class="uk-navbar-right">
             <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#mobile-menu-slide" uk-toggle></a>
