--- a/layouts/agent-idx-websites/agent-idx-websites.html
+++ b/layouts/agent-idx-websites/agent-idx-websites.html
@@ -1,47 +1,71 @@
 {{ define "main" }}
-<div class="uk-section uk-section-small" style="border-bottom:1px solid rgba(132,132,132,.15)">
-    <div class="uk-container">
-        <div class="uk-grid-column-small uk-grid-row-large uk-child-width-1-4@s uk-text-center" uk-grid>
+<div class="uk-section">
+    <div class="uk-container uk-text-center">
+        <div class="uk-flex uk-flex-center">
+            <div class="uk-width-large">
+                <h2 class="uk-text-center">Agent Website with IDX</h2>
+                <p>Utilizing one of the most versatile website templates, your site will be fully integrated with one of the most used IDX on the market - Ihomefinder.</p>
+            </div>
+        </div>
+        <div class="uk-grid-column-medium uk-grid-row-large uk-child-width-1-3@s uk-text-center uk-margin-medium-top" uk-grid uk-height-match="target: .uk-card">
             <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628111940/hungryram/sales_cxrqby.png" alt="" width="100" width="100">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-h4 uk-text-bold">Built for single agents</h3>
+                        <p>Easily scale your website as your business grows</p>
+                    </div>
                 </div>
             </div>
             <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628111940/hungryram/money_oohppl.png" alt="" width="100" width="100">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-h4 uk-text-bold">Affordable for new agents</h3>
+                        <p>Start your site with low investments and receive superior services</p>
+                    </div>
                 </div>
             </div>
             <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628111940/hungryram/mobile-responsive_xil3ij.png" alt="" width="100" width="100">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-h4 uk-text-bold">Adapt to any screen size</h3>
+                        <p>Target your audience no matter what device they're using</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="uk-section uk-section-large">
-    <div class="uk-container">
-        <div class="uk-grid-large" uk-grid>
-            <div class="uk-width-1-3@s uk-flex uk-flex-middle">
-                <div class="uk-width-large">
-                    <h2>The features your business needs</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque ut optio debitis expedita neque consequuntur architecto corrupti dignissimos maiores doloribus.</p>
-                    <ul class="uk-list">
-                        <li>The features your business needs</li>
-                        <li>Boost your website traffic</li>
-                        <li>Launch your project in style</li>
+<div class="uk-section">
+    <div class="uk-container" uk-height-match="target: .uk-card">
+        <div uk-grid>
+            <div class="uk-width-1-2@s uk-card uk-flex uk-flex-middle">
+                <div class="uk-width-large switcher">
+                    <h2>Delivering the ultimate real estate website at an affordable price</h2>
+                    <div class="uk-margin-medium">
+                        <p>A more powerful online presence for your real estate business. Combining modern web tools with Ihomefinder, your site will perform different than most real estate sites.</p>
+                        <a href="" class="uk-button uk-button-primary">Get started</a>
+                    </div>
+                    <ul class="uk-list uk-text-left">
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Property search with lead capture</li>
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Track lead activities and the properties viewed</li>
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Control your listings in the admin</li>
                     </ul>
                 </div>
             </div>
             <div class="uk-width-expand">
-                <div class="uk-card uk-card-default">
-                    <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign9.jpg" alt="">
+                <div class="uk-card switcher-video">
+                    <ul class="uk-margin">
+                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628104078/hungryram/idxhomes_wglvnk.jpg" alt="">
+                    </ul>
                 </div>
             </div>
         </div>
@@ -49,22 +73,25 @@
 </div>
 
 <!-- OTHER SECTION -->
-<div class="uk-section uk-section-large">
+<div class="uk-section">
     <div class="uk-container">
         <div class="uk-grid-large" uk-grid>
             <div class="uk-width-expand">
                 <div class="uk-card uk-card-default">
-                    <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign9.jpg" alt="">
+                    <video src="https://res.cloudinary.com/hungryram19/video/upload/v1628116758/hungryram/karina-crisp-featured_fujx1s.mp4" loop muted playsinline uk-video="autoplay: inview"></video>
+
                 </div>
             </div>
             <div class="uk-width-1-3@s uk-flex uk-flex-middle">
-                <div class="uk-width-large">
-                    <h2>The features your business needs</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque ut optio debitis expedita neque consequuntur architecto corrupti dignissimos maiores doloribus.</p>
-                    <ul class="uk-list">
-                        <li>The features your business needs</li>
-                        <li>Boost your website traffic</li>
-                        <li>Launch your project in style</li>
+                <div class="uk-width-large uk-margin-medium">
+                    <h2>Need a different design for your own branding?</h2>
+                    <p>A more custom design will better reflect your brand image and how you are presented to your visitors.</p>
+                    <a href="" class="uk-button uk-button-primary">Learn more</a>
+
+                    <ul class="uk-list uk-text-left">
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Design 100% unique for your business</li>
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Affordable than most</li>
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Request custom features</li>
                     </ul>
                 </div>
             </div>
@@ -87,6 +114,7 @@
                     <div class="uk-width-1-2@s">
                         <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true" class="uk-grid-small" uk-grid action="/thank-you">
                             <input name="bot-field" type="hidden" />
+                            <input name="Link" type="hidden" value="{{ .Permalink }}" />
                             <input type="hidden" name="Subject" value="Website Contact Form">
                             <div class="uk-width-1-2@s">
                                 <input class="uk-input" type="text" placeholder="Name" name="Name">
@@ -112,18 +140,6 @@
 </div>
 
 <!-- CLOSING -->
-<div class="uk-section">
-    <div class="uk-container">
-        <div class="uk-width-1-1 uk-flex uk-flex-center">
-            <div class="uk-width-large uk-text-center">
-                <h6 class="uk-margin-remove">Match the feel of your business</h6>
-                <h2 class="uk-margin-remove uk-text-bold">Consult our experts about your project for free</h2>
-                <div class="uk-margin-medium-top">
-                    <a href="" class="uk-button uk-button-primary">Get a quote</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+{{ partial "home/closing" . }}
 
 {{ end }}
