--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,5 +4,5 @@
 {{ partial "home/second-home" . }}
 {{ partial "home/image-banner" . }}
 {{ partial "home/work" . }}
-{{ partial "home/closing" . }}
+{{ partial "global/closing" . }}
 {{ partial "global/footer" . }}
