--- a/layouts/broker-idx-websites/broker-idx-websites.html
+++ b/layouts/broker-idx-websites/broker-idx-websites.html
@@ -1,70 +1,70 @@
 {{ define "main" }}
-<div class="uk-section uk-section-small" style="border-bottom:1px solid rgba(132,132,132,.15)">
-    <div class="uk-container">
-        <div class="uk-grid-column-small uk-grid-row-large uk-child-width-1-4@s uk-text-center" uk-grid>
+<div class="uk-section">
+    <div class="uk-container uk-text-center">
+        <div class="uk-flex uk-flex-center">
+            <div class="uk-width-large">
+                <h2 class="uk-text-center"><span class="accent">Broker</span> Website with IDX</h2>
+                <p>Focus on growing your brokerage while your website brings in the leads. Integrated with iHomefinder - the most used IDX in the market.</p>
+            </div>
+        </div>
+        <div class="uk-grid-column-medium uk-grid-row-large uk-child-width-1-3@s uk-text-center uk-margin-medium-top" uk-grid uk-height-match="target: .uk-card">
             <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628123015/hungryram/scale_c1kkqk.png" alt="" width="100" width="100">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-h4 uk-text-bold">Scale your brokerage</h3>
+                        <p>Website performance is important as your brokerage grows. Security and maintenance is taken care of for you.</p>
+                    </div>
                 </div>
             </div>
             <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628123015/hungryram/team_emitib.png" alt="" width="100" width="100">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-h4 uk-text-bold">Manage teams and offices</h3>
+                        <p>Provide your team their own personalized page with listings, bio, and leads.</p>
+                    </div>
                 </div>
             </div>
             <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628123015/hungryram/personalized-search_ctfqvk.png" alt="" width="100" width="100">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-h4 uk-text-bold">Personalize searches</h3>
+                        <p>Send in new listings to your leads that meet specific requirements.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="uk-section uk-section-large">
-    <div class="uk-container">
-        <div class="uk-grid-large" uk-grid>
-            <div class="uk-width-1-3@s uk-flex uk-flex-middle">
-                <div class="uk-width-large">
-                    <h2>The features your business needs</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque ut optio debitis expedita neque consequuntur architecto corrupti dignissimos maiores doloribus.</p>
-                    <ul class="uk-list">
-                        <li>The features your business needs</li>
-                        <li>Boost your website traffic</li>
-                        <li>Launch your project in style</li>
+<div class="uk-section">
+    <div class="uk-container" uk-height-match="target: .uk-card">
+        <div uk-grid>
+            <div class="uk-width-1-2@s uk-card uk-flex uk-flex-middle">
+                <div class="uk-width-large switcher">
+                    <h2>Control your online presence with powerful tools for your brokerage</h2>
+                    <div class="uk-margin-medium">
+                        <p>A more powerful online presence for your real estate business. Combining modern web tools with Ihomefinder, your site will perform different than most real estate sites.</p>
+                        <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get started</a>
+                    </div>
+                    <ul class="uk-list uk-text-left">
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Branded email listing alerts</li>
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Daily statistics and resporting</li>
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Search by map</li>
                     </ul>
                 </div>
             </div>
             <div class="uk-width-expand">
-                <div class="uk-card uk-card-default">
-                    <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign9.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- OTHER SECTION -->
-<div class="uk-section uk-section-large">
-    <div class="uk-container">
-        <div class="uk-grid-large" uk-grid>
-            <div class="uk-width-expand">
-                <div class="uk-card uk-card-default">
-                    <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign9.jpg" alt="">
-                </div>
-            </div>
-            <div class="uk-width-1-3@s uk-flex uk-flex-middle">
-                <div class="uk-width-large">
-                    <h2>The features your business needs</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque ut optio debitis expedita neque consequuntur architecto corrupti dignissimos maiores doloribus.</p>
-                    <ul class="uk-list">
-                        <li>The features your business needs</li>
-                        <li>Boost your website traffic</li>
-                        <li>Launch your project in style</li>
+                <div class="uk-card switcher-video">
+                    <ul style="padding-left:0;">
+                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628104078/hungryram/idxhomes_wglvnk.jpg" alt="">
                     </ul>
                 </div>
             </div>
@@ -73,57 +73,54 @@
 </div>
 
 <!-- BANNER -->
-<div class="uk-child-width-1-1 uk-light" uk-grid>
-    <div>
-        <div class="uk-background-cover uk-height-large uk-flex uk-flex-center uk-flex-middle" style="background-image: url(https://www.ekko-wp.com/wp-content/uploads/sites/3/2019/04/business4.jpg);" uk-parallax="bgy: -300; easing: 0">
-            <div class="uk-container uk-container-medium">
-                <div class="uk-grid">
-                    <div class="uk-width-1-2@s uk-flex uk-flex-middle">
-                        <div>
-                            <h3>Transform your ideas into a great product</h3>
-                            <p>Customize the framework to match your small business processes using simple drag-and-drop tools.</p>
-                        </div>
+<div style="background: url(https://res.cloudinary.com/hungryram19/image/upload/v1628046996/hungryram/parallax-background_b2vsuk.jpg) no-repeat center;padding-top:40px;padding-bottom:40px;" uk-parallax="bgy: -200">
+    <div class="uk-container">
+        <div class="uk-flex uk-flex-middle" uk-grid>
+            <div class="uk-width-1-2@s">
+                <div>
+                    <h3 class="uk-white">Ready to grow your brokerage site on top of modern technology?</h3>
+                    <p class="uk-white">Save hours of valuable time and money and trust that your website will be the right solution for you.</p>
+                </div>
+            </div>
+            <div class="uk-width-1-2@s">
+                {{ partial "templates/form" . }}
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- OTHER SECTION -->
+<div class="uk-section">
+    <div class="uk-container">
+        <div class="uk-grid-large" uk-grid>
+            <div class="uk-width-expand">
+                <div class="uk-card uk-card-default">
+                    <video src="https://res.cloudinary.com/hungryram19/video/upload/v1628116758/hungryram/karina-crisp-featured_fujx1s.mp4" loop muted playsinline uk-video="autoplay: inview"></video>
+
+                </div>
+            </div>
+            <div class="uk-width-1-3@s uk-flex uk-flex-middle">
+                <div class="uk-width-large uk-margin-medium">
+                    <h2>Need a different design for your own branding?</h2>
+                    <div class="uk-margin-medium">
+                        <p>A more custom design will better reflect your brand image and how you are presented to your visitors.</p>
+                        <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Learn more</a>
                     </div>
-                    <div class="uk-width-1-2@s">
-                        <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true" class="uk-grid-small" uk-grid action="/thank-you">
-                            <input name="bot-field" type="hidden" />
-                            <input type="hidden" name="Subject" value="Website Contact Form">
-                            <div class="uk-width-1-2@s">
-                                <input class="uk-input" type="text" placeholder="Name" name="Name">
-                            </div>
-                            <div class="uk-width-1-2@s">
-                                <input class="uk-input" type="text" placeholder="Phone" name="Phone">
-                            </div>
-                            <div class="uk-width-1-1">
-                                <input class="uk-input" type="text" placeholder="Email" name="Email">
-                            </div>
-                            <div class="uk-width-1-1">
-                                <textarea class="uk-textarea" rows="5" placeholder="Your Message" name="Message"></textarea>
-                            </div>
-                            <div class="uk-width-1-1">
-                                <button class="uk-button uk-button-secondary">Submit</button>
-                            </div>
-                        </form>
-                    </div>
+
+                    <ul class="uk-list uk-text-left">
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Design 100% unique for your business</li>
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Affordable than most</li>
+                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Request custom features</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+
+
 <!-- CLOSING -->
-<div class="uk-section">
-    <div class="uk-container">
-        <div class="uk-width-1-1 uk-flex uk-flex-center">
-            <div class="uk-width-large uk-text-center">
-                <h6 class="uk-margin-remove">Match the feel of your business</h6>
-                <h2 class="uk-margin-remove uk-text-bold">Consult our experts about your project for free</h2>
-                <div class="uk-margin-medium-top">
-                    <a href="" class="uk-button uk-button-primary">Get a quote</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+{{ partial "global/closing" . }}
 
 {{ end }}
