--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,10 @@
 /* TYPOGRAPHY */
 
 body {
-    font-size: 15.2px;
-    font-family: 'Open Sans', sans-serif;
+    font-size: 16.5px;
+    font-family: 'Catamaran', sans-serif;
     font-weight: 400;
+    line-height: 1.7em;
 }
 
 body h1,
@@ -49,11 +50,17 @@ svg {
     border-radius: 20px!important;
 }
 
+.border {
+    border: 1px solid #e4e7f2;
+    border-radius: 8px;
+}
+
 .inherit-color {
     color: inherit;
 }
 
-div.uk-card-default {
+div.uk-card-default,
+div.box-shadow.uk-card {
     transition: .3s ease;
     box-shadow: 0 25px 98px 0 rgb(0 0 0 / 10%);
     border-radius: 8px;
@@ -74,6 +81,7 @@ button.modal-button {
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
+    background: #2196f3
 }
 
 /* FORMS */
@@ -208,7 +216,7 @@ div.switcher ul li.uk-active a:not(.more-info) {
     box-shadow: 0 2px 50px rgb(0 0 0 / 10%);
     transition: .3s ease;
     color: #2196f3;
-    padding: 20px; 
+    padding: 20px;
     display: block;
 }
 
