--- a/layouts/custom-website-design/custom-website-design.html
+++ b/layouts/custom-website-design/custom-website-design.html
@@ -27,7 +27,7 @@
                 </div>
                 </div>
             </div>
-            <div class="uk-width-1-2@s">
+            <div class="uk-width-1-2@s uk-visible@s">
                 <div class="uk-card box-shadow">
                     <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628143481/hungryram/custom-web-development_satvzb.png" alt="" class="border">
                 </div>
@@ -35,25 +35,45 @@
         </div>
     </div>
 </div>
-    <div class="uk-card uk-grid-collapse uk-child-width-1-2@s uk-margin" style="background: #F5F5F5" uk-grid>
-        <div class="uk-card-media-left uk-cover-container">
-            <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628096113/hungryram/groot2_emgwxf.jpg" alt="" uk-cover>
-            <canvas height="500"></canvas>
-        </div>
-        <div class="uk-flex uk-flex-middle uk-flex-center">
-            <div class="uk-width-large">
-                <div class="uk-card-body">
-                    <h2>Following important web industry standards</h2>
-                    <p>As technology and Googles search algorithm changes, so should your website. While there are many factors in website development, these are the most crucial</p>
-                    <ul class="uk-list">
-                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SEO for search engines</li>
-                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Responsive Design for any device</li>
-                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Schema to help Google identify your business</li>
-                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SSL certificate for security</li>
-                    </ul>
-                </div>
+<div class="uk-card uk-grid-collapse uk-child-width-1-2@s" style="background: #F5F5F5" uk-grid>
+    <div class="uk-card-media-left uk-cover-container">
+        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628096113/hungryram/groot2_emgwxf.jpg" alt="" uk-cover>
+        <canvas height="500"></canvas>
+    </div>
+    <div class="uk-flex uk-flex-middle uk-flex-center">
+        <div class="uk-width-large">
+            <div class="uk-card-body">
+                <h2>Following important web industry standards</h2>
+                <p>As technology and Googles search algorithm changes, so should your website. While there are many factors in website development, these are the most crucial</p>
+                <ul class="uk-list">
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SEO for search engines</li>
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Responsive Design for any device</li>
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Schema to help Google identify your business</li>
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SSL certificate for security</li>
+                </ul>
             </div>
         </div>
     </div>
+</div>
+<div class="uk-card uk-grid-collapse uk-child-width-1-2@s" style="background: #F5F5F5" uk-grid>
+    <div class="uk-flex uk-flex-middle uk-flex-center">
+        <div class="uk-width-large">
+            <div class="uk-card-body">
+                <h2>Following important web industry standards</h2>
+                <p>As technology and Googles search algorithm changes, so should your website. While there are many factors in website development, these are the most crucial</p>
+                <ul class="uk-list">
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SEO for search engines</li>
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Responsive Design for any device</li>
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Schema to help Google identify your business</li>
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SSL certificate for security</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="uk-card-media-left uk-cover-container">
+        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628096113/hungryram/groot2_emgwxf.jpg" alt="" uk-cover>
+        <canvas height="500"></canvas>
+    </div>
+</div>
 {{ partial "global/closing" . }}
 {{ end }}
