--- a/layouts/partials/home/second-home.html
+++ b/layouts/partials/home/second-home.html
@@ -17,7 +17,7 @@
                             {{ end }}
                         </ul>       
                     </div>
-                    <ul class="uk-list uk-text-left text-switch" uk-switcher="connect: .right-switcher">
+                    <ul class="uk-list uk-text-left text-switch" uk-switcher="connect: .right-switcher;animation: uk-animation-fade">
                         {{ range $switcher }}
                         <li><a href=""><span uk-icon="icon: check" class="uk-margin-small-right"></span>{{ .heading }}</a></li>
                         {{ end }}
