--- a/layouts/real-estate-agent-websites/real-estate-agent-websites.html
+++ b/layouts/real-estate-agent-websites/real-estate-agent-websites.html
@@ -1,109 +1,39 @@
 {{ define "main" }}
-<div class="uk-section uk-section-small" style="border-bottom:1px solid rgba(132,132,132,.15)">
+<div class="uk-section uk-margin-medium-top">
     <div class="uk-container">
-        <div class="uk-grid-column-small uk-grid-row-large uk-child-width-1-4@s uk-text-center" uk-grid>
-            <div>
+        <div class="uk-text-left uk-grid-large uk-flex-middle" uk-grid>
+            <div class="uk-width-1-3@s">
                 <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card">
-                    <a href="" style="color: #222"><span href="#" uk-icon="icon: phone" class="uk-margin-small-right"></span><span class="uk-text-middle">Affordable</span></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="uk-section uk-section-large">
-    <div class="uk-container">
-        <div class="uk-grid-large" uk-grid>
-            <div class="uk-width-1-3@s uk-flex uk-flex-middle">
-                <div class="uk-width-large">
-                    <h2>The features your business needs</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque ut optio debitis expedita neque consequuntur architecto corrupti dignissimos maiores doloribus.</p>
-                    <ul class="uk-list">
-                        <li>The features your business needs</li>
-                        <li>Boost your website traffic</li>
-                        <li>Launch your project in style</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="uk-width-expand">
-                <div class="uk-card uk-card-default">
-                    <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign9.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- OTHER SECTION -->
-<div class="uk-section uk-section-large">
-    <div class="uk-container">
-        <div class="uk-grid-large" uk-grid>
-            <div class="uk-width-expand">
-                <div class="uk-card uk-card-default">
-                    <img src="https://www.ekko-wp.com/static/wp-content/uploads/sites/3/2019/04/webdesign9.jpg" alt="">
-                </div>
-            </div>
-            <div class="uk-width-1-3@s uk-flex uk-flex-middle">
-                <div class="uk-width-large">
-                    <h2>The features your business needs</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque ut optio debitis expedita neque consequuntur architecto corrupti dignissimos maiores doloribus.</p>
-                    <ul class="uk-list">
-                        <li>The features your business needs</li>
-                        <li>Boost your website traffic</li>
-                        <li>Launch your project in style</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- BANNER -->
-<div class="uk-child-width-1-1 uk-light" uk-grid>
-    <div>
-        <div class="uk-background-cover uk-height-large uk-flex uk-flex-center uk-flex-middle" style="background-image: url(https://www.ekko-wp.com/wp-content/uploads/sites/3/2019/04/business4.jpg);" uk-parallax="bgy: -300; easing: 0">
-            <div class="uk-container uk-container-medium">
-                <div class="uk-grid">
-                    <div class="uk-width-1-2@s uk-flex uk-flex-middle">
-                        <div>
-                            <h3>Transform your ideas into a great product</h3>
-                            <p>Customize the framework to match your small business processes using simple drag-and-drop tools.</p>
-                        </div>
+                    <h2>Manage your added listings and more</h2>
+                    <div class="uk-margin-medium">
+                        <p>Most websites integrate third party like IDX. This can prevent faster load time. If you don't need IDX, our admin portal allows you to manually add in listings through a user-friendly interface.</p>
+                        <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get started</a>
                     </div>
-                    <div class="uk-width-1-2@s">
-                        <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true" class="uk-grid-small" uk-grid action="/thank-you">
-                            <input name="bot-field" type="hidden" />
-                            <input type="hidden" name="Subject" value="Website Contact Form">
-                            <div class="uk-width-1-2@s">
-                                <input class="uk-input" type="text" placeholder="Name" name="Name">
-                            </div>
-                            <div class="uk-width-1-2@s">
-                                <input class="uk-input" type="text" placeholder="Phone" name="Phone">
-                            </div>
-                            <div class="uk-width-1-1">
-                                <input class="uk-input" type="text" placeholder="Email" name="Email">
-                            </div>
-                            <div class="uk-width-1-1">
-                                <textarea class="uk-textarea" rows="5" placeholder="Your Message" name="Message"></textarea>
-                            </div>
-                            <div class="uk-width-1-1">
-                                <button class="uk-button uk-button-secondary">Submit</button>
-                            </div>
-                        </form>
+                </div>
+            </div>
+            <div class="uk-width-expand">
+                <div class="uk-card box-shadow">
+                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628184545/hungryram/agent-idx_fhaz9m.jpg" alt="" class="border">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="uk-section uk-margin-medium-top">
+    <div class="uk-container">
+        <div class="uk-text-left uk-grid-large uk-flex-middle" uk-grid>
+            <div class="uk-width-expand">
+                <div class="uk-card box-shadow">
+                    <video src="https://res.cloudinary.com/hungryram19/video/upload/v1628187465/hungryram/admin2_lzlrvt.mp4" loop muted playsinline uk-video="autoplay: inview"></video>
+                </div>
+            </div>
+            <div class="uk-width-1-3@s">
+                <div class="uk-card">
+                    <h2>Control the appearance and branding of your site</h2>
+                    <div class="uk-margin-medium">
+                        <p>A versatile dashboard accessible through desktop and mobile. Need an option within a dashboard? Chances are it could be added in.</p>
+                        <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get started</a>
                     </div>
                 </div>
             </div>
@@ -111,19 +41,25 @@
     </div>
 </div>
 
-<!-- CLOSING -->
-<div class="uk-section">
+<div class="uk-section uk-margin-medium-top">
     <div class="uk-container">
-        <div class="uk-width-1-1 uk-flex uk-flex-center">
-            <div class="uk-width-large uk-text-center">
-                <h6 class="uk-margin-remove">Match the feel of your business</h6>
-                <h2 class="uk-margin-remove uk-text-bold">Consult our experts about your project for free</h2>
-                <div class="uk-margin-medium-top">
-                    <a href="" class="uk-button uk-button-primary">Get a quote</a>
+        <div class="uk-text-left uk-grid-large uk-flex-middle" uk-grid>
+            <div class="uk-width-1-3@s">
+                <div class="uk-card">
+                    <h2>Power a real estate website with no database</h2>
+                    <div class="uk-margin-medium">
+                        <p>Most real estate sites run on database, which makes more calls to the server and can slow down a website. Instead your website is built with files that are displayed instantly to your visitors.</p>
+                        <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get started</a>
+                    </div>
+                </div>
+            </div>
+            <div class="uk-width-expand">
+                <div class="uk-card box-shadow">
+                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628191120/hungryram/listings2_sygkmq.jpg" alt="" class="border">
                 </div>
             </div>
         </div>
     </div>
 </div>
-
+{{ partial "global/closing" . }}
 {{ end }}
