--- a/layouts/custom-website-design/custom-website-design.html
+++ b/layouts/custom-website-design/custom-website-design.html
@@ -7,7 +7,7 @@
                     <h2>Custom web design <span class="accent">100%</span> unique to your business</h2>
                     <div class="uk-margin-medium">
                         <p>Incorporate the goals of your company into a visually captivating state that can be displayed on any device. The design is a direct reflection of your overall business.</p>
-                        <a href="#modal-signup" class="uk-button uk-button-primary">Get started</a>
+                        <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get started</a>
                     </div>
                 </div>
                 <div class="uk-child-width-1-2 uk-text-center" uk-grid>
@@ -35,43 +35,81 @@
         </div>
     </div>
 </div>
-<div class="uk-card uk-grid-collapse uk-child-width-1-2@s" style="background: #F5F5F5" uk-grid>
+
+<div class="uk-section" style="background: #F5F5F5">
+    <div class="uk-container">
+        <div class="uk-flex uk-flex-center">
+            <div class="uk-width-xlarge">
+                <div class="uk-text-center">
+                    <h5>What goes into creating a great website?</h5>
+                    <h2>Consistent process leads to quality results and growth</h2>
+                </div>
+            </div>
+        </div>
+        <div class="uk-child-width-expand@s uk-text-center uk-margin-medium-top our-process-container" uk-grid>
+            <div>
+                <div class="uk-card">
+                    <div class="process-step">
+                        <span>1</span>
+                    </div>
+                    <h4 class="uk-h6">Discover and Strategize</h4>
+                    <p>Research and planning is important to find the best way to design your website based off of your market.</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-card">
+                    <div class="process-step">
+                        <span>2</span>
+                    </div>
+                    <h4 class="uk-h6">Design and Development</h4>
+                    <p>Designs are put together on a preview stage where you can track the site progress.</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-card">
+                    <div class="process-step">
+                        <span>3</span>
+                    </div>
+                    <h4 class="uk-h6">Launch and Nurture</h4>
+                    <p>Your site will be tested for performance and SEO to ensure quality and accuracy.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="uk-card uk-grid-collapse uk-child-width-1-2@s" uk-grid>
     <div class="uk-card-media-left uk-cover-container">
-        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628096113/hungryram/groot2_emgwxf.jpg" alt="" uk-cover>
+        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628177752/hungryram/wireframe_jl1ido.jpg" alt="" uk-cover>
         <canvas height="500"></canvas>
     </div>
     <div class="uk-flex uk-flex-middle uk-flex-center">
         <div class="uk-width-large">
             <div class="uk-card-body">
-                <h2>Following important web industry standards</h2>
-                <p>As technology and Googles search algorithm changes, so should your website. While there are many factors in website development, these are the most crucial</p>
+                <h2>Promising you <span class="accent">exceptional</span> results</h2>
+                <p>Our websites are developed to withstand major technological changes. Meaning your site will be a fortress that can hold for years to come unlike traditional websites that needs constant updating and maintenance.</p>
                 <ul class="uk-list">
-                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SEO for search engines</li>
-                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Responsive Design for any device</li>
-                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Schema to help Google identify your business</li>
-                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SSL certificate for security</li>
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Extremely reliable. Extremely secure</li>
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Personalization made fast and easy</li>
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Custom backend features</li>
+                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Everything coded from scratch</li>
                 </ul>
             </div>
         </div>
     </div>
 </div>
-<div class="uk-card uk-grid-collapse uk-child-width-1-2@s" style="background: #F5F5F5" uk-grid>
+<div class="uk-card uk-grid-collapse uk-child-width-1-2@s" uk-grid>
     <div class="uk-flex uk-flex-middle uk-flex-center">
         <div class="uk-width-large">
             <div class="uk-card-body">
-                <h2>Following important web industry standards</h2>
-                <p>As technology and Googles search algorithm changes, so should your website. While there are many factors in website development, these are the most crucial</p>
-                <ul class="uk-list">
-                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SEO for search engines</li>
-                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Responsive Design for any device</li>
-                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Schema to help Google identify your business</li>
-                    <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SSL certificate for security</li>
-                </ul>
+                <h2>Work direcly with a professional developer</h2>
+                <p>A developer with a decade of experience in web development can offer you a multitude of resources for your online presence. Find out how we can help.</p>
+                <a href="{{ .Site.Data.dev.modal.modal_link }}" class="uk-button uk-button-primary" uk-toggle>Get in touch</a>
             </div>
         </div>
     </div>
     <div class="uk-card-media-left uk-cover-container">
-        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628096113/hungryram/groot2_emgwxf.jpg" alt="" uk-cover>
+        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628180276/hungryram/office_ydtajt.jpg" alt="" uk-cover>
         <canvas height="500"></canvas>
     </div>
 </div>
