--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -29,19 +29,18 @@
                 <div>
                     <h6 class="uk-text-bold accent">Real Estate Website</h6>
                     <ul class="uk-list">
-                        <li><a href="/blog">Agent Websites</a></li>
-                        <li><a href="/blog">Broker Websites</a></li>
-                        <li><a href="/blog">Single Property Websites</a></li>
-                        <li><a href="/blog">Agent IDX</a></li>
-                        <li><a href="/blog">Broker IDX</a></li>
+                        <li><a href="/real-estate-agent-websites">Agent Websites</a></li>
+                        <li><a href="/real-estate-broker-websites">Broker Websites</a></li>
+                        <li><a href="/agent-idx-websites">Agent IDX</a></li>
+                        <li><a href="/broker-idx-websites">Broker IDX</a></li>
 
                     </ul>                
                 </div>
                 <div>
                     <h6 class="uk-text-bold accent">Small Business Website</h6>
                     <ul class="uk-list">
-                        <li><a href="/blog">Custom Website</a></li>
-                        <li><a href="/blog">Ecommerce Website</a></li>
+                        <li><a href="/custom-website-design">Custom Website</a></li>
+                        <li><a href="/ecommerce-website-design">Ecommerce Website</a></li>
                     </ul>           
                 </div>
                 <div>
