--- a/layouts/real-estate-broker-websites/real-estate-broker-websites.html
+++ b/layouts/real-estate-broker-websites/real-estate-broker-websites.html
@@ -1,122 +1,65 @@
 {{ define "main" }}
-<div class="uk-section">
-    <div class="uk-container uk-text-center">
-        <div class="uk-flex uk-flex-center">
-            <div class="uk-width-large">
-                <h2 class="uk-text-center">Agent Website with IDX</h2>
-                <p>Utilizing one of the most versatile website templates, your site will be fully integrated with one of the most used IDX on the market - Ihomefinder.</p>
-            </div>
-        </div>
-        <div class="uk-grid-column-medium uk-grid-row-large uk-child-width-1-3@s uk-text-center uk-margin-medium-top" uk-grid uk-height-match="target: .uk-card">
-            <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628111940/hungryram/sales_cxrqby.png" alt="" width="100" width="100">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-h4 uk-text-bold">Built for single agents</h3>
-                        <p>Easily scale your website as your business grows</p>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628111940/hungryram/money_oohppl.png" alt="" width="100" width="100">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-h4 uk-text-bold">Affordable for new agents</h3>
-                        <p>Start your site with low investments and receive superior services</p>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div class="uk-card uk-card-default">
-                    <div class="uk-card-media-top">
-                        <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628111940/hungryram/mobile-responsive_xil3ij.png" alt="" width="100" width="100">
-                    </div>
-                    <div class="uk-card-body">
-                        <h3 class="uk-h4 uk-text-bold">Adapt to any screen size</h3>
-                        <p>Target your audience no matter what device they're using</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="uk-section">
-    <div class="uk-container" uk-height-match="target: .uk-card">
-        <div uk-grid>
-            <div class="uk-width-1-2@s uk-card uk-flex uk-flex-middle">
-                <div class="uk-width-large switcher">
-                    <h2>Delivering the ultimate real estate website at an affordable price</h2>
+<div class="uk-section uk-margin-medium-top">
+    <div class="uk-container">
+        <div class="uk-text-left uk-grid-large uk-flex-middle" uk-grid>
+            <div class="uk-width-1-3@s">
+                <div class="uk-card">
+                    <h2>Manage your entire team, listings, and offices in one dashboard</h2>
                     <div class="uk-margin-medium">
-                        <p>A more powerful online presence for your real estate business. Combining modern web tools with Ihomefinder, your site will perform different than most real estate sites.</p>
-                        <a href="" class="uk-button uk-button-primary">Get started</a>
+                        <p>Add as many team members, listings, and dashboard with no limit. Scale your brokerage with a high performing website</p>
+                        <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get started</a>
                     </div>
-                    <ul class="uk-list uk-text-left">
-                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Property search with lead capture</li>
-                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Track lead activities and the properties viewed</li>
-                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Control your listings in the admin</li>
-                    </ul>
                 </div>
             </div>
             <div class="uk-width-expand">
-                <div class="uk-card switcher-video">
-                    <ul class="uk-margin">
-                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628104078/hungryram/idxhomes_wglvnk.jpg" alt="">
-                    </ul>
+                <div class="uk-card box-shadow">
+                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628183050/hungryram/manual-listings_cyquqk.jpg" alt="" class="border">
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- OTHER SECTION -->
-<div class="uk-section">
+<div class="uk-section uk-margin-medium-top">
     <div class="uk-container">
-        <div class="uk-grid-large" uk-grid>
+        <div class="uk-text-left uk-grid-large uk-flex-middle" uk-grid>
             <div class="uk-width-expand">
-                <div class="uk-card uk-card-default">
-                    <video src="https://res.cloudinary.com/hungryram19/video/upload/v1628116758/hungryram/karina-crisp-featured_fujx1s.mp4" loop muted playsinline uk-video="autoplay: inview"></video>
-
+                <div class="uk-card box-shadow">
+                    <video src="https://res.cloudinary.com/hungryram19/video/upload/v1628187465/hungryram/admin2_lzlrvt.mp4" loop muted playsinline uk-video="autoplay: inview"></video>
                 </div>
             </div>
-            <div class="uk-width-1-3@s uk-flex uk-flex-middle">
-                <div class="uk-width-large uk-margin-medium">
-                    <h2>Need a different design for your own branding?</h2>
-                    <p>A more custom design will better reflect your brand image and how you are presented to your visitors.</p>
-                    <a href="" class="uk-button uk-button-primary">Learn more</a>
-
-                    <ul class="uk-list uk-text-left">
-                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Design 100% unique for your business</li>
-                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Affordable than most</li>
-                        <li class="uk-text-bold"><span uk-icon="icon: check" class="uk-margin-small-right"></span>Request custom features</li>
-                    </ul>
+            <div class="uk-width-1-3@s">
+                <div class="uk-card">
+                    <h2>Get access to customize your website</h2>
+                    <div class="uk-margin-medium">
+                        <p>With a versatile back end system, you'll be able to manage your entire website whenever. Need a custom feature for your brokerage? No problem at all.</p>
+                        <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get started</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- BANNER -->
-<div style="background: url(https://res.cloudinary.com/hungryram19/image/upload/v1628046996/hungryram/parallax-background_b2vsuk.jpg) no-repeat center;padding-top:40px;padding-bottom:40px;" uk-parallax="bgy: -200">
+<div class="uk-section uk-margin-medium-top">
     <div class="uk-container">
-        <div class="uk-flex uk-flex-middle" uk-grid>
-            <div class="uk-width-1-2@s">
-                <div>
-                    <h3 class="uk-white">Ready to grow your brokerage site on top of modern technology?</h3>
-                    <p class="uk-white">Save hours of valuable time and money and trust that your website will be the right solution for you.</p>
+        <div class="uk-text-left uk-grid-large uk-flex-middle" uk-grid>
+            <div class="uk-width-1-3@s">
+                <div class="uk-card">
+                    <h2>Your brokerage built on the newest tools for websites</h2>
+                    <div class="uk-margin-medium">
+                        <p>While larger agencies are stuck building on Wordpress, your brokerage will scale using modern web development architecture.</p>
+                        <a href="#modal-signup" class="uk-button uk-button-primary" uk-toggle>Get started</a>
+                    </div>
                 </div>
             </div>
-            <div class="uk-width-1-2@s">
-                {{ partial "templates/form" . }}
+            <div class="uk-width-expand">
+                <div class="uk-card box-shadow">
+                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1628191120/hungryram/listings2_sygkmq.jpg" alt="" class="border">
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-<!-- CLOSING -->
 {{ partial "global/closing" . }}
-
 {{ end }}
